server/deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disaster-relief-backend-svc
spec:
  selector:
    app: disaster-relief-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
